--- a/src/components/dashboard/Dashboard.css
+++ b/src/components/dashboard/Dashboard.css
@@ -8,9 +8,9 @@
   right: 0;
   width: calc(100% - 15vw);
   height: 10vh;
-  background-color: #ffffff;
-  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.04);
+  background-color: #2F3437;
   z-index: 10;
+  border-bottom: 1px solid rgb(149,150,152, 0.3);
 }
 .Sidebar {
   position: fixed;
@@ -18,13 +18,14 @@
   left: 0;
   height: 100%;
   width: 15vw;
-  background-color: #4d4f5c;
+  background-color: #2F3437;
+  border-right: 1px solid rgb(149,150,152, 0.3);
   overflow: hidden;
 }
 .Main {
   height: calc(100% - 10vh);
   width: calc(100% - 15vw);
-  background-color: #f0f0f7;
+  background-color: #262A2D;
   position: fixed;
   top: 10vh;
   right: 0;
@@ -47,14 +48,24 @@
   border-left: 5px solid transparent;
   transition: all 0.3s ease;
 }
+.Sidebar a{
+  text-decoration: none;
+  color: initial;
+}
+.Sidebar a span{
+  color: #959698;
+}
+.Sidebar a.list-item-active span:first-child{
+  color: #C36D76;
+}
 .list-item:hover {
-  background-color: #43425d;
+  background-color: #363B3E;
   cursor: pointer;
 }
 .list-item-active {
-  border-left: 5px solid #a3a0fb;
-  background-color: #43425d;
-  color: #a5a4bf;
+  border-left: 3px solid #C36D76;
+  background-color: #363B3E;
+  color: #C36D76;
 }
 .list-item-icon {
   margin-right: 20px;
@@ -65,9 +76,9 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  color: #ffffff;
-  background-color: #43425d;
-  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.04);
+  color: #959698;
+  background-color: #2F3437;
+  font-weight: bold;
 }
 .brand-logo img {
   width: 60px;
