--- a/src/components/dashboard/chats/Chat.css
+++ b/src/components/dashboard/chats/Chat.css
@@ -1,36 +1,40 @@
 .chat-box-container {
   width: 100%;
   height: calc(100% - 10vh);
-  background-color: #ffffff;
+  background-color: #2F3437;
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.05);
   display: flex;
 }
 .chat-users {
   width: 400px;
   height: 100%;
-  border-right: 1px solid #cccccc;
+  border-right: 1px solid rgb(149,150,152, 0.3);
 }
 .chat-user-search {
   height: 85px;
   width: 100%;
-  border-bottom: 1px solid #cccccc;
+  border-bottom: 1px solid rgb(149,150,152, 0.3);
   display: flex;
   align-items: center;
   justify-content: center;
   position: relative;
-  padding: 0 33px;
+  /* padding: 0 33px; */
 }
 .chat-user-search input[type="search"].search-box {
   width: 300px;
-  border: 1px solid #f0f0f7;
+  border: 1px solid rgb(149,150,152, 0.3);
   height: 25px;
   border-radius: calc(25px / 2);
   margin: 0;
   padding-left: 30px;
   font-size: 14px;
+  outline: none;
+  background-color: #262A2D;
+  transition: all 0.3s ease;
+  color: #959698;
 }
 .chat-user-search input[type="search"].search-box:focus {
-  border: 1px solid #43425d;
+  border: 1px solid rgb(149,150,152, 0.3);
   box-shadow: none;
 }
 .chat-user-search input[type="search"].search-box::placeholder {
@@ -38,10 +42,7 @@
   font-size: 14px;
 }
 .search-icon {
-  position: absolute;
-  top: 53%;
-  transform: translateY(-50%);
-  left: 40px;
+  padding: 5px 10px 0 0;
   color: #777777;
 }
 .chat-user-container {
@@ -51,19 +52,25 @@
   flex-direction: column;
   overflow: auto;
 }
+.chat-user-search{
+  display: flex;
+  justify-content: space-evenly;
+  padding: 0 20px;
+}
 .user-details {
   width: 100%;
-  padding: 20px;
+  /* padding: 20px; */
   min-height: 85px;
-  border-bottom: 1px solid #cccccc;
+  border-bottom: 1px solid rgb(149,150,152, 0.3);
   display: flex;
   align-items: center;
-  color: #43425d;
+  color: #959698;
   font-size: 11px;
   position: relative;
+  background-color: #262A2D;
 }
 .user-details:hover {
-  background-color: #f5f6fa;
+  background-color: #2F3437;
   cursor: pointer;
 }
 .user-profile-image {
@@ -71,14 +78,13 @@
   height: 40px;
   border-radius: 50%;
   background-color: #4d4f5c;
-  margin-right: 20px;
+  margin: 0 20px;
 }
 .username {
   display: flex;
   flex-direction: column;
 }
 .username span:first-child {
-  color: #4d4f5c;
   font-weight: bolder;
   font-size: 13px;
 }
@@ -99,7 +105,7 @@
   height: 85px;
   width: 100%;
   padding: 20px;
-  border-bottom: 1px solid #cccccc;
+  border-bottom: 1px solid rgb(149,150,152, 0.3);
 }
 .messager-avatar {
   height: 60px;
@@ -109,7 +115,7 @@
   margin-right: 20px;
 }
 .messager-details {
-  color: #43425d;
+  color: #959698;
   font-size: 15px;
   display: flex;
   flex-direction: column;
@@ -121,13 +127,14 @@
   padding: 0 20px;
   height: 50vh;
   overflow: auto;
-  border-bottom: 1px solid #cccccc;
+  border-bottom: 1px solid rgb(149,150,152, 0.3);
 }
 .message-container {
   width: 100%;
   padding: 20px;
   display: flex;
   flex-direction: column;
+  color: #959698;
 }
 .flex-l {
   align-items: flex-start;
@@ -141,16 +148,16 @@
   max-width: 200px;
 }
 .message-received {
-  background-color: #edf0f5;
+  background-color: #C16975;
   border-radius: 20px 20px 20px 0;
+  color: #f5f6fa;
 }
 .message-sent {
-  background-color: rgb(96, 148, 216);
+  background-color: #614290;
   border-radius: 20px 20px 0 20px;
-  color: #ffffff;
+  color: #f5f6fa;
 }
 .timestamp {
-  color: #43425d;
   font-size: 11px;
   display: block;
 }
@@ -163,7 +170,7 @@
 .chat-enter .text-box {
   width: 100%;
   height: 100%;
-  background-color: #f5f6fa;
+  background-color: rgb(38, 42, 45);
   border: none;
   padding: 10px;
   display: flex;
@@ -174,7 +181,7 @@
 .highlighted-border {
   width: calc(100% - 40px);
   height: 2px;
-  background: #43425d;
+  background: rgb(149,150,152, 0.3);
   position: absolute;
   left: 20px;
   bottom: 20px;
