--- a/src/components/shared/small-cards/SmallCards.css
+++ b/src/components/shared/small-cards/SmallCards.css
@@ -1,5 +1,6 @@
 .small-cards {
-  background-color: #ffffff;
+  background-color: #2F3437;
+  color: #969799;
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.05);
   padding: 15px;
   display: flex;
@@ -13,7 +14,6 @@
   flex-direction: column;
 }
 .card-name {
-  color: #cccccc;
   font-size: 12px;
 }
 .total {
